samples/_failures_safe/1761319220_519483_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4c575213.c: In function ‘print_analysis’:
./samples/SAFE/__tmp_4c575213.c:151:13: error: expected expression at end of input
  151 |             printed =
      |             ^~~~~~~
./samples/SAFE/__tmp_4c575213.c:151:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4c575213.c:151:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4c575213.c:151:13: error: expected declaration or statement at end of input
